--- a/FroalaEditor.nuspec
+++ b/FroalaEditor.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>FroalaEditor</id>
-        <version>3.0.0-rc.2</version>
+        <version>3.0.0</version>
         <authors>Stefan Neculai</authors>
         <owners>Froala Labs</owners>
         <licenseUrl>https://www.froala.com/wysiwyg-editor/terms</licenseUrl>
