--- a/FroalaEditor.nuspec
+++ b/FroalaEditor.nuspec
@@ -2,10 +2,11 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>FroalaEditor</id>
-        <version>4.5.1</version>
+        <version>4.5.2</version>
         <authors>Froala</authors>
         <owners>Froala Labs</owners>
         <licenseUrl>https://www.froala.com/wysiwyg-editor/terms</licenseUrl>
+        <readme>README.md</readme>
         <projectUrl>https://www.froala.com/wysiwyg-editor/</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Nuget package for Froala WYSIWYG Editor.</description>
@@ -16,5 +17,6 @@
     </metadata>
     <files>
     	<file src="src\wysiwyg-editor\**\*.*" target="Content\Scripts\froala-editor" exclude="src\wysiwyg-editor\.gitignore;src\wysiwyg-editor\License.txt;src\wysiwyg-editor\README.md;src\wysiwyg-editor\bower.json;src\wysiwyg-editor\composer.json;src\wysiwyg-editor\package.json;src\wysiwyg-editor\.github\**\.*;src\wysiwyg-editor\html\**\.*"></file>
+        <file src=".\README.md" target="" />
     </files>
 </package>
